--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -60,22 +60,22 @@
    "source": [
     "######################################  some SCAD and MCP things  #######################################\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def soft_thresholding(x, lambda_):\n",
+    "def soft_thresholding(x, lambda_, pca_p):\n",
     "    '''\n",
     "    To calculate soft-thresholding mapping of a given ONE-DIMENSIONAL tensor, BESIDES THE FIRST TERM (so beta_0 will not be penalized). \n",
     "    This function is to be used for calculation involving L1 penalty term later. \n",
     "    '''\n",
-    "    return _np.hstack((_np.array([x[0]]),\n",
+    "    return _np.hstack((_np.array([x[0:pca_p+1]]),\n",
     "                       _np.where(\n",
-    "                           _np.abs(x[1:]) > lambda_,\n",
-    "                           x[1:] - _np.sign(x[1:]) * lambda_, 0)))\n",
+    "                           _np.abs(x[pca_p+1:]) > lambda_,\n",
+    "                           x[pca_p+1:] - _np.sign(x[pca_p+1:]) * lambda_, 0)))\n",
     "\n",
     "\n",
     "soft_thresholding(_np.random.rand(20), 3.1)\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SCAD(x, lambda_, a=3.7):\n",
+    "def SCAD(x, lambda_, a=3.7, pca_p):\n",
     "    '''\n",
     "    To calculate SCAD penalty value;\n",
     "    #x can be a multi-dimensional tensor;\n",
@@ -89,12 +89,12 @@
     "        _np.where(x < a * lambda_,\n",
     "                  (2 * a * lambda_ * x - x**2 - lambda_**2) / (2 * (a - 1)),\n",
     "                  lambda_**2 * (a + 1) / 2))\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SCAD_grad(x, lambda_, a=3.7):\n",
+    "def SCAD_grad(x, lambda_, a=3.7, pca_p):\n",
     "    '''\n",
     "    To calculate the gradient of SCAD wrt. input x; \n",
     "    #x can be a multi-dimensional tensor. \n",
@@ -105,12 +105,12 @@
     "    temp = _np.where(\n",
     "        x <= lambda_, lambda_ * sgn,\n",
     "        _np.where(x < a * lambda_, (a * lambda_ * sgn - sgn * x) / (a - 1), 0))\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def MCP(x, lambda_, gamma):\n",
+    "def MCP(x, lambda_, gamma, pca_p):\n",
     "    '''\n",
     "    To calculate MCP penalty value; \n",
     "    #x can be a multi-dimensional tensor. \n",
@@ -119,12 +119,12 @@
     "    x = _np.abs(x)\n",
     "    temp = _np.where(x <= gamma * lambda_, lambda_ * x - x**2 / (2 * gamma),\n",
     "                     .5 * gamma * lambda_**2)\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def MCP_grad(x, lambda_, gamma):\n",
+    "def MCP_grad(x, lambda_, gamma, pca_p):\n",
     "    '''\n",
     "    To calculate MCP gradient wrt. input x; \n",
     "    #x can be a multi-dimensional tensor. \n",
@@ -132,12 +132,12 @@
     "    temp = _np.where(\n",
     "        _np.abs(x) < gamma * lambda_,\n",
     "        lambda_ * _np.sign(x) - x / gamma, _np.zeros_like(x))\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SCAD_concave(x, lambda_, a=3.7):\n",
+    "def SCAD_concave(x, lambda_, a=3.7, pca_p):\n",
     "    '''\n",
     "    The value of concave part of SCAD penalty; \n",
     "    #x can be a multi-dimensional tensor. \n",
@@ -148,12 +148,12 @@
     "        _np.where(x < a * lambda_,\n",
     "                  (lambda_ * x - (x**2 + lambda_**2) / 2) / (a - 1),\n",
     "                  (a + 1) / 2 * lambda_**2 - lambda_ * x))\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SCAD_concave_grad(x, lambda_, a=3.7):\n",
+    "def SCAD_concave_grad(x, lambda_, a=3.7, pca_p):\n",
     "    '''\n",
     "    The gradient of concave part of SCAD penalty wrt. input x; \n",
     "    #x can be a multi-dimensional tensor. \n",
@@ -164,12 +164,12 @@
     "        x <= lambda_, 0.,\n",
     "        _np.where(x < a * lambda_, (lambda_ * sgn - sgn * x) / (a - 1),\n",
     "                  -lambda_ * sgn))\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def MCP_concave(x, lambda_, gamma):\n",
+    "def MCP_concave(x, lambda_, gamma, pca_p):\n",
     "    '''\n",
     "    The value of concave part of MCP penalty; \n",
     "    #x can be a multi-dimensional tensor. \n",
@@ -178,19 +178,19 @@
     "    x = _np.abs(x)\n",
     "    temp = _np.where(x <= gamma * lambda_, -(x**2) / (2 * gamma),\n",
     "                     (gamma * lambda_**2) / 2 - lambda_ * x)\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp\n",
     "\n",
     "\n",
     "@_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def MCP_concave_grad(x, lambda_, gamma):\n",
+    "def MCP_concave_grad(x, lambda_, gamma, pca_p):\n",
     "    '''\n",
     "    The gradient of concave part of MCP penalty wrt. input x; \n",
     "    #x can be a multi-dimensional tensor. \n",
     "    '''\n",
     "    temp = _np.where(\n",
     "        _np.abs(x) < gamma * lambda_, -x / gamma, -lambda_ * _np.sign(x))\n",
-    "    temp[0] = 0.  # this is to NOT penalize intercept beta later\n",
+    "    temp[0:pca_p+1] = 0.  # this is to NOT penalize intercept beta later\n",
     "    return temp"
    ]
   },
@@ -661,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
