adding support for PCA adjustments

--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-03T00:30:34.237432Z",
-     "start_time": "2022-08-03T00:30:33.707949Z"
+     "end_time": "2022-08-03T01:26:19.782843Z",
+     "start_time": "2022-08-03T01:26:19.245007Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yang_\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
       "  \"class\": algorithms.Blowfish,\n"
      ]
     }
@@ -56,19 +56,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Implementation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-03T00:45:09.037976Z",
-     "start_time": "2022-08-03T00:45:08.956478Z"
+     "end_time": "2022-08-03T01:26:20.895772Z",
+     "start_time": "2022-08-03T01:26:19.784359Z"
     }
    },
    "outputs": [],
@@ -207,9 +200,27 @@
     "    temp = _np.where(\n",
     "        _np.abs(x) < gamma * lambda_, -x / gamma, -lambda_ * _np.sign(x))\n",
     "    temp[0:pca_p + 1] = 0.  # this is to NOT penalize intercept beta later\n",
-    "    return temp\n",
-    "\n",
-    "\n",
+    "    return temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-03T01:26:20.917163Z",
+     "start_time": "2022-08-03T01:26:20.896777Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_LM(N, SNP_ind, bed, beta_md, y, outcome_iid,\n",
     "                                      pca_p, pca):\n",
@@ -526,11 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-03T00:48:26.445061Z",
-     "start_time": "2022-08-03T00:45:09.971676Z"
+     "end_time": "2022-08-03T01:31:47.431322Z",
+     "start_time": "2022-08-03T01:26:20.918411Z"
     }
    },
    "outputs": [
@@ -543,65 +554,65 @@
       "[1. 0. 1. ... 2. 1. 1.]\n",
       "[1. 2. 0. ... 0. 2. 1.]\n",
       "[2. 1. 2. ... 2. 2. 2.]\n",
-      "[[ 5.94288261e+00  2.71719857e-03  1.28260206e-03 -2.34397867e-03\n",
-      "   1.27354270e+01 -3.34020202e-02  7.13222494e+00  0.00000000e+00\n",
+      "[[ 5.95078633e+00  1.35586725e-03 -6.89354580e-04 -2.43732160e-04\n",
+      "   1.27047982e+01 -3.39424915e-02  7.12436362e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.57426999e+00  5.99461847e-03  2.34629081e-03 -3.48014576e-03\n",
-      "   1.82531713e+01 -6.80790697e-02  9.98240412e+00  0.00000000e+00\n",
+      " [ 4.58354151e+00  2.71373624e-03 -1.48766564e-03 -9.59692328e-04\n",
+      "   1.82048141e+01 -7.15832466e-02  9.96354017e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.74808111e+00  8.95772998e-03  3.38625229e-03 -4.78834557e-03\n",
-      "   2.52885574e+01  0.00000000e+00  1.43627950e+01  0.00000000e+00\n",
+      " [ 4.76031987e+00  3.98897362e-03 -2.21619986e-03 -1.53821315e-03\n",
+      "   2.52269572e+01  0.00000000e+00  1.43335580e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.72255054e+00  1.19577436e-02  4.42659913e-03 -6.07397965e-03\n",
-      "   3.21222976e+01  0.00000000e+00  1.85477538e+01  0.00000000e+00\n",
+      " [ 4.73753031e+00  5.27482825e-03 -2.95400009e-03 -2.13465222e-03\n",
+      "   3.20500014e+01  0.00000000e+00  1.85067896e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.72278952e+00  1.49492723e-02  5.46421726e-03 -7.36219950e-03\n",
-      "   3.89766040e+01  0.00000000e+00  2.27603077e+01  0.00000000e+00\n",
+      " [ 4.74053580e+00  6.55924765e-03 -3.69084980e-03 -2.72892933e-03\n",
+      "   3.88964189e+01  0.00000000e+00  2.27065348e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.71970396e+00  1.79381865e-02  6.49951146e-03 -8.64975546e-03\n",
-      "   4.58227634e+01  0.00000000e+00  2.69716313e+01  0.00000000e+00\n",
+      " [ 4.74020769e+00  7.84378977e-03 -4.42806942e-03 -3.32364003e-03\n",
+      "   4.57374549e+01  0.00000000e+00  2.69039319e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.71705406e+00  2.09237321e-02  7.53243173e-03 -9.93706853e-03\n",
-      "   5.26644927e+01  0.00000000e+00  3.11854498e+01  0.00000000e+00\n",
+      " [ 4.74031091e+00  9.12825337e-03 -5.16548820e-03 -3.91844894e-03\n",
+      "   5.25768262e+01  0.00000000e+00  3.11027115e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.71435384e+00  2.39060109e-02  8.56298682e-03 -1.12240853e-02\n",
-      "   5.95013176e+01  0.00000000e+00  3.54012810e+01  0.00000000e+00\n",
+      " [ 4.74035884e+00  1.04126646e-02 -5.90312813e-03 -4.51339956e-03\n",
+      "   5.94140523e+01  0.00000000e+00  3.53023918e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.71166611e+00  2.68850144e-02  9.59117792e-03 -1.25108136e-02\n",
-      "   6.63333054e+01 -2.66176827e-01  3.96191869e+01  0.00000000e+00\n",
+      " [ 4.74041438e+00  1.16970202e-02 -6.64098629e-03 -5.10848636e-03\n",
+      "   6.62491955e+01 -2.65165472e-01  3.95030353e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.70898273e+00  2.98607480e-02  1.06170072e-02 -1.37972535e-02\n",
-      "   7.31604534e+01 -8.73348519e-01  4.38391589e+01  0.00000000e+00\n",
+      " [ 4.74046939e+00  1.29813207e-02 -7.37906298e-03 -5.70371019e-03\n",
+      "   7.30822479e+01 -8.68516336e-01  4.37046341e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.70630476e+00  3.28332157e-02  1.16404766e-02 -1.50834060e-02\n",
-      "   7.99827680e+01 -2.17208543e+00  4.80611975e+01  0.00000000e+00\n",
+      " [ 4.74052494e+00  1.42655663e-02 -8.11735809e-03 -6.29907105e-03\n",
+      "   7.99132106e+01 -2.15110928e+00  4.79071896e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.70363206e+00  3.58024213e-02  1.26615882e-02 -1.63692718e-02\n",
-      "   8.68002543e+01 -5.87180738e+00  5.22853023e+01  0.00000000e+00\n",
+      " [ 4.74058087e+00  1.55497569e-02 -8.85587155e-03 -6.89456908e-03\n",
+      "   8.67420836e+01 -5.82579306e+00  5.21107017e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.70096463e+00  3.87683688e-02  1.36803440e-02 -1.76548520e-02\n",
-      "   9.36129177e+01 -9.87754242e+00  5.65114727e+01  0.00000000e+00\n",
+      " [ 4.74063721e+00  1.68338928e-02 -9.59460329e-03 -7.49020436e-03\n",
+      "   9.35688668e+01 -9.81929929e+00  5.63151707e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.69830247e+00  4.17310621e-02  1.46967461e-02 -1.89401473e-02\n",
-      "   1.00420763e+02 -1.38848890e+01  6.07397083e+01  0.00000000e+00\n",
+      " [ 4.74069396e+00  1.81179740e-02 -1.03335532e-02 -8.08597702e-03\n",
+      "   1.00393561e+02 -1.38116212e+01  6.05205969e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.69564557e+00  4.46905053e-02  1.57107964e-02 -2.02251587e-02\n",
-      "   1.07223797e+02 -1.78938433e+01  6.49700088e+01  0.00000000e+00\n",
+      " [ 4.74075111e+00  1.94020008e-02 -1.10727213e-02 -8.68188715e-03\n",
+      "   1.07216165e+02 -1.78027584e+01  6.47269805e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.69299394e+00  4.76467022e-02  1.67224971e-02 -2.15098870e-02\n",
-      "   1.14022023e+02 -2.19044016e+01  6.92023735e+01  0.00000000e+00\n",
+      " [ 4.74080868e+00  2.06859731e-02 -1.18121075e-02 -9.27793487e-03\n",
+      "   1.14036680e+02 -2.17927105e+01  6.89343217e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.69034756e+00  5.05996568e-02  1.77318500e-02 -2.27943331e-02\n",
-      "   1.20815448e+02 -2.59165602e+01  7.34368022e+01  0.00000000e+00\n",
+      " [ 4.74086664e+00  2.19698911e-02 -1.25517117e-02 -9.87412028e-03\n",
+      "   1.20855105e+02 -2.57814773e+01  7.31426207e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.68770642e+00  5.35493730e-02  1.87388573e-02 -2.40784979e-02\n",
-      "   1.27604075e+02 -2.99303154e+01  7.76732942e+01  0.00000000e+00\n",
+      " [ 4.74092502e+00  2.32537550e-02 -1.32915338e-02 -1.04704435e-02\n",
+      "   1.27671442e+02 -2.97690583e+01  7.73518777e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.68507053e+00  5.64958548e-02  1.97435209e-02 -2.53623822e-02\n",
-      "   1.34387912e+02 -3.39456634e+01  8.19118493e+01  0.00000000e+00\n",
+      " [ 4.74098380e+00  2.45375648e-02 -1.40315738e-02 -1.10669046e-02\n",
+      "   1.34485689e+02 -3.37554533e+01  8.15620930e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 4.68243989e+00  5.94391061e-02  2.07458428e-02 -2.66459869e-02\n",
-      "   1.41166963e+02 -3.79626005e+01  8.61524670e+01  0.00000000e+00\n",
+      " [ 4.74104299e+00  2.58213207e-02 -1.47718316e-02 -1.16635037e-02\n",
+      "   1.41297847e+02 -3.77406618e+01  8.57732668e+01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]]\n"
      ]
     }
@@ -686,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
