--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-03T01:07:41.237962Z",
-     "start_time": "2022-08-03T01:07:40.701835Z"
+     "end_time": "2022-08-03T01:26:23.598217Z",
+     "start_time": "2022-08-03T01:26:23.147465Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yang_\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
       "  \"class\": algorithms.Blowfish,\n"
      ]
     }
@@ -56,19 +56,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Implementation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-03T01:07:42.556268Z",
-     "start_time": "2022-08-03T01:07:41.238962Z"
+     "end_time": "2022-08-03T01:26:23.801166Z",
+     "start_time": "2022-08-03T01:26:23.600172Z"
     }
    },
    "outputs": [],
@@ -207,9 +200,27 @@
     "    temp = _np.where(\n",
     "        _np.abs(x) < gamma * lambda_, -x / gamma, -lambda_ * _np.sign(x))\n",
     "    temp[0:pca_p + 1] = 0.  # this is to NOT penalize intercept beta later\n",
-    "    return temp\n",
-    "\n",
-    "\n",
+    "    return temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-03T01:26:23.830644Z",
+     "start_time": "2022-08-03T01:26:23.802641Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid,\n",
     "                                      pca_p, pca):\n",
@@ -530,11 +541,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-03T01:13:54.915135Z",
-     "start_time": "2022-08-03T01:07:42.556268Z"
+     "end_time": "2022-08-03T01:29:59.059625Z",
+     "start_time": "2022-08-03T01:26:23.832267Z"
     }
    },
    "outputs": [
@@ -544,66 +555,66 @@
      "text": [
       "(10000, 3)\n",
       "L_convex is: 9843.632966454592\n",
-      "[[ 7.85947402e-01 -9.99764030e-01 -1.00025162e+00 -1.00028660e+00\n",
-      "   1.91095596e+00 -2.67529124e-02  1.83671021e+00 -1.83819825e-01\n",
-      "   0.00000000e+00  1.40413236e+00]\n",
-      " [ 9.08241083e-01 -9.99688917e-01 -1.00046774e+00 -1.00053434e+00\n",
-      "   2.20862004e+00  0.00000000e+00  2.01280882e+00 -5.90296318e-02\n",
-      "   0.00000000e+00  9.83780091e-01]\n",
-      " [ 9.93520696e-01 -9.99606677e-01 -1.00064131e+00 -1.00080547e+00\n",
-      "   2.47809165e+00  0.00000000e+00  2.16069470e+00 -1.27428961e-02\n",
-      "   0.00000000e+00  5.40281552e-01]\n",
-      " [ 1.10531348e+00 -9.99480803e-01 -1.00082273e+00 -1.00119182e+00\n",
-      "   2.83829183e+00  0.00000000e+00  2.36841864e+00  0.00000000e+00\n",
+      "[[ 3.63273821e-01  1.00006114e+00 -1.00023330e+00  1.00024037e+00\n",
+      "   1.14262754e+00 -2.20442355e-01  9.63474587e-01 -4.46441077e-01\n",
+      "   0.00000000e+00  6.07582404e-01]\n",
+      " [ 2.26008607e-01  1.00013348e+00 -1.00030166e+00  1.00042735e+00\n",
+      "   9.14837487e-01 -9.17725189e-02  5.83917329e-01 -3.65228885e-01\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.17884450e+00 -9.99369705e-01 -1.00093519e+00 -1.00153156e+00\n",
-      "   3.11725856e+00  0.00000000e+00  2.52614274e+00 -2.53294996e-02\n",
+      " [ 2.42652526e-01  1.00013182e+00 -1.00031419e+00  1.00045668e+00\n",
+      "   8.97805521e-01  0.00000000e+00  5.28913070e-01 -3.06780509e-01\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.20323265e+00 -9.99262244e-01 -1.00102565e+00 -1.00187208e+00\n",
-      "   3.35347850e+00  0.00000000e+00  2.64064809e+00 -1.05484994e-01\n",
+      " [ 2.43682863e-01  1.00013188e+00 -1.00031549e+00  1.00046059e+00\n",
+      "   8.95538478e-01  0.00000000e+00  5.21890749e-01 -3.00908097e-01\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.20862923e+00 -9.99150269e-01 -1.00110519e+00 -1.00221991e+00\n",
-      "   3.58197647e+00  0.00000000e+00  2.74737313e+00 -2.21402417e-01\n",
-      "   0.00000000e+00 -6.86747172e-03]\n",
-      " [ 1.20883400e+00 -9.99029775e-01 -1.00117885e+00 -1.00257916e+00\n",
-      "   3.81858117e+00  0.00000000e+00  2.86229692e+00 -3.65121383e-01\n",
-      "   0.00000000e+00 -3.44387758e-02]\n",
-      " [ 1.21143926e+00 -9.98898275e-01 -1.00124945e+00 -1.00295308e+00\n",
-      "   4.07179075e+00  0.00000000e+00  2.99398464e+00 -5.32413183e-01\n",
-      "   0.00000000e+00 -7.80434589e-02]\n",
-      " [ 1.21993942e+00 -9.98754660e-01 -1.00131864e+00 -1.00334351e+00\n",
-      "   4.34537137e+00  0.00000000e+00  3.14622645e+00 -7.21048277e-01\n",
-      "   0.00000000e+00 -1.35586509e-01]\n",
-      " [ 1.23600278e+00 -9.98598762e-01 -1.00138766e+00 -1.00375126e+00\n",
-      "   4.64101499e+00  0.00000000e+00  3.32072897e+00 -9.29548301e-01\n",
-      "   0.00000000e+00 -2.06066466e-01]\n",
-      " [ 1.26040480e+00 -9.98431108e-01 -1.00145746e+00 -1.00417625e+00\n",
-      "   4.95942124e+00  0.00000000e+00  3.51821494e+00 -1.15673709e+00\n",
-      "   0.00000000e+00 -2.89022615e-01]\n",
-      " [ 1.29345371e+00 -9.98252718e-01 -1.00152870e+00 -1.00461763e+00\n",
-      "   5.30078530e+00  0.00000000e+00  3.73891782e+00 -1.40157791e+00\n",
-      "   0.00000000e+00 -3.84308825e-01]\n",
-      " [ 1.33527898e+00 -9.98064877e-01 -1.00160165e+00 -1.00507391e+00\n",
-      "   5.66512833e+00 -9.91342347e-04  3.98290844e+00 -1.66309229e+00\n",
-      "   0.00000000e+00 -4.91934140e-01]\n",
-      " [ 1.38624601e+00 -9.97868865e-01 -1.00167629e+00 -1.00554325e+00\n",
-      "   6.05276331e+00 -1.31484541e-02  4.25054539e+00 -1.94023258e+00\n",
-      "   0.00000000e+00 -6.11803081e-01]\n",
-      " [ 1.44711182e+00 -9.97665709e-01 -1.00175237e+00 -1.00602374e+00\n",
-      "   6.46447245e+00 -3.56662027e-02  4.54262732e+00 -2.23185842e+00\n",
-      "   0.00000000e+00 -7.43608121e-01]\n",
-      " [ 1.51799815e+00 -9.97456254e-01 -1.00182915e+00 -1.00651311e+00\n",
-      "   6.90040816e+00 -6.83787275e-02  4.85928679e+00 -2.53719612e+00\n",
-      "   6.62217157e-04 -8.87433240e-01]\n",
-      " [ 1.59777501e+00 -9.97240929e-01 -1.00190543e+00 -1.00700896e+00\n",
-      "   7.35945260e+00 -1.12374742e-01  5.19936741e+00 -2.85614922e+00\n",
-      "   2.75353288e-02 -1.04407914e+00]\n",
-      " [ 1.68411568e+00 -9.97019509e-01 -1.00197982e+00 -1.00750902e+00\n",
-      "   7.83927429e+00 -1.69920886e-01  5.56052008e+00 -3.18928891e+00\n",
-      "   8.10339196e-02 -1.21496663e+00]\n",
-      " [ 1.77584281e+00 -9.96791177e-01 -1.00205141e+00 -1.00801163e+00\n",
-      "   8.33625112e+00 -2.41990412e-01  5.93986700e+00 -3.53574292e+00\n",
-      "   1.60438009e-01 -1.40031872e+00]]\n"
+      " [ 2.70581111e-01  1.00013409e+00 -1.00034772e+00  1.00056095e+00\n",
+      "   8.53877149e-01  0.00000000e+00  3.58262385e-01 -1.65408586e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70583622e-01  1.00013409e+00 -1.00034772e+00  1.00056096e+00\n",
+      "   8.53874916e-01  0.00000000e+00  3.58249314e-01 -1.65397702e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70586133e-01  1.00013409e+00 -1.00034773e+00  1.00056097e+00\n",
+      "   8.53874186e-01  0.00000000e+00  3.58237745e-01 -1.65388321e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70588645e-01  1.00013409e+00 -1.00034773e+00  1.00056098e+00\n",
+      "   8.53874959e-01  0.00000000e+00  3.58227679e-01 -1.65380442e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70591156e-01  1.00013409e+00 -1.00034773e+00  1.00056099e+00\n",
+      "   8.53877233e-01  0.00000000e+00  3.58219114e-01 -1.65374066e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70593667e-01  1.00013409e+00 -1.00034774e+00  1.00056100e+00\n",
+      "   8.53881010e-01  0.00000000e+00  3.58212052e-01 -1.65369192e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70596177e-01  1.00013409e+00 -1.00034774e+00  1.00056101e+00\n",
+      "   8.53886289e-01  0.00000000e+00  3.58206493e-01 -1.65365820e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70598688e-01  1.00013410e+00 -1.00034774e+00  1.00056101e+00\n",
+      "   8.53893070e-01  0.00000000e+00  3.58202435e-01 -1.65363951e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70601199e-01  1.00013410e+00 -1.00034774e+00  1.00056102e+00\n",
+      "   8.53901353e-01  0.00000000e+00  3.58199879e-01 -1.65363584e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70603709e-01  1.00013410e+00 -1.00034775e+00  1.00056103e+00\n",
+      "   8.53911138e-01  0.00000000e+00  3.58198826e-01 -1.65364720e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70606219e-01  1.00013410e+00 -1.00034775e+00  1.00056104e+00\n",
+      "   8.53922425e-01  0.00000000e+00  3.58199275e-01 -1.65367358e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70608729e-01  1.00013410e+00 -1.00034775e+00  1.00056105e+00\n",
+      "   8.53935215e-01  0.00000000e+00  3.58201226e-01 -1.65371499e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70611238e-01  1.00013410e+00 -1.00034775e+00  1.00056106e+00\n",
+      "   8.53949507e-01  0.00000000e+00  3.58204679e-01 -1.65377143e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70613747e-01  1.00013410e+00 -1.00034776e+00  1.00056107e+00\n",
+      "   8.53965300e-01  0.00000000e+00  3.58209634e-01 -1.65384290e-01\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 2.70616256e-01  1.00013410e+00 -1.00034776e+00  1.00056108e+00\n",
+      "   8.53982596e-01 -1.33323696e-08  3.58216091e-01 -1.65392939e-01\n",
+      "   1.67634314e-07 -1.00083142e-06]\n",
+      " [ 2.89611860e-01  1.00013659e+00 -1.00037913e+00  1.00066600e+00\n",
+      "   1.06062465e+00 -2.99734431e-02  4.42738665e-01 -2.97527956e-01\n",
+      "   1.05776576e-02 -4.06971940e-02]]\n"
      ]
     }
    ],
@@ -688,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
