--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -417,9 +417,9 @@
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"./sim/sim1.bed\"\n",
-    "bim_file = r\"./sim/sim1.bim\"\n",
-    "fam_file = r\"./sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "outcome = np.random.rand(_bed.iid_count)\n",
@@ -478,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
