--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -623,9 +623,9 @@
     "from bed_reader import open_bed\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "bed_file = r\"./sim/sim1.bed\"\n",
-    "bim_file = r\"./sim/sim1.bim\"\n",
-    "fam_file = r\"./sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file,\n",
     "                fam_filepath=fam_file,\n",
