--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -419,9 +419,9 @@
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"./sim/sim1.bed\"\n",
-    "bim_file = r\"./sim/sim1.bim\"\n",
-    "fam_file = r\"./sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
     "outcome = np.random.rand(_bed.iid_count)\n",
