--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -222,8 +222,8 @@
    "outputs": [],
    "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_convex_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid,\n",
-    "                                      pca_p, pca):\n",
+    "def _SNP_update_smooth_grad_convex_logistic(N, SNP_ind, bed, beta_md, y,\n",
+    "                                            outcome_iid, pca_p, pca):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -259,8 +259,8 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_SCAD_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid,\n",
-    "                                    _lambda, a, pca_p, pca):\n",
+    "def _SNP_update_smooth_grad_SCAD_logistic(N, SNP_ind, bed, beta_md, y,\n",
+    "                                          outcome_iid, _lambda, a, pca_p, pca):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
@@ -277,8 +277,9 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_MCP_logistic(N, SNP_ind, bed, beta_md, y, outcome_iid,\n",
-    "                                   _lambda, gamma, pca_p, pca):\n",
+    "def _SNP_update_smooth_grad_MCP_logistic(N, SNP_ind, bed, beta_md, y,\n",
+    "                                         outcome_iid, _lambda, gamma, pca_p,\n",
+    "                                         pca):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
@@ -307,31 +308,32 @@
     "    #     y_temp -= _np.mean(y)\n",
     "    #     y_temp /= _np.std(y)\n",
     "    p = len(list(bed.sid))\n",
-    "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic(N=N,\n",
-    "                                                  SNP_ind=SNP_ind,\n",
-    "                                                  bed=bed,\n",
-    "                                                  beta_md=_np.zeros(p),\n",
-    "                                                  y=y,\n",
-    "                                                  outcome_iid=outcome_iid)\n",
+    "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic(\n",
+    "        N=N,\n",
+    "        SNP_ind=SNP_ind,\n",
+    "        bed=bed,\n",
+    "        beta_md=_np.zeros(p),\n",
+    "        y=y,\n",
+    "        outcome_iid=outcome_iid)\n",
     "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def SNP_UAG_logistic_SCAD_MCP_PCA(bed_file,\n",
-    "                            bim_file,\n",
-    "                            fam_file,\n",
-    "                            outcome,\n",
-    "                            outcome_iid,\n",
-    "                            SNP_ind,\n",
-    "                            L_convex,\n",
-    "                            pca,\n",
-    "                            beta_0=_np.ones(1),\n",
-    "                            tol=1e-5,\n",
-    "                            maxit=500,\n",
-    "                            _lambda=.5,\n",
-    "                            penalty=\"SCAD\",\n",
-    "                            a=3.7,\n",
-    "                            gamma=2.):\n",
+    "                                  bim_file,\n",
+    "                                  fam_file,\n",
+    "                                  outcome,\n",
+    "                                  outcome_iid,\n",
+    "                                  SNP_ind,\n",
+    "                                  L_convex,\n",
+    "                                  pca,\n",
+    "                                  beta_0=_np.ones(1),\n",
+    "                                  tol=1e-5,\n",
+    "                                  maxit=500,\n",
+    "                                  _lambda=.5,\n",
+    "                                  penalty=\"SCAD\",\n",
+    "                                  a=3.7,\n",
+    "                                  gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
@@ -462,20 +464,20 @@
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def SNP_solution_path_logistic(bed_file,\n",
-    "                         bim_file,\n",
-    "                         fam_file,\n",
-    "                         outcome,\n",
-    "                         outcome_iid,\n",
-    "                         lambda_,\n",
-    "                         L_convex,\n",
-    "                         SNP_ind,\n",
-    "                         pca,\n",
-    "                         beta_0=_np.ones(1),\n",
-    "                         tol=1e-5,\n",
-    "                         maxit=500,\n",
-    "                         penalty=\"SCAD\",\n",
-    "                         a=3.7,\n",
-    "                         gamma=2.):\n",
+    "                               bim_file,\n",
+    "                               fam_file,\n",
+    "                               outcome,\n",
+    "                               outcome_iid,\n",
+    "                               lambda_,\n",
+    "                               L_convex,\n",
+    "                               SNP_ind,\n",
+    "                               pca,\n",
+    "                               beta_0=_np.ones(1),\n",
+    "                               tol=1e-5,\n",
+    "                               maxit=500,\n",
+    "                               penalty=\"SCAD\",\n",
+    "                               a=3.7,\n",
+    "                               gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -514,21 +516,22 @@
     "    beta = _np.sign(beta)\n",
     "    beta_mat = _np.repeat(beta, len(lambda_) + 1, axis=0)\n",
     "    for j in range(len(lambda_)):\n",
-    "        beta_mat[j + 1, :] = SNP_UAG_logistic_SCAD_MCP_PCA(bed_file=bed_file,\n",
-    "                                                     bim_file=bim_file,\n",
-    "                                                     fam_file=fam_file,\n",
-    "                                                     outcome=outcome,\n",
-    "                                                     SNP_ind=SNP_ind,\n",
-    "                                                     L_convex=L_convex,\n",
-    "                                                     pca=pca,\n",
-    "                                                     beta_0=beta_mat[j, :],\n",
-    "                                                     tol=tol,\n",
-    "                                                     maxit=maxit,\n",
-    "                                                     _lambda=lambda_[j],\n",
-    "                                                     penalty=penalty,\n",
-    "                                                     outcome_iid=outcome_iid,\n",
-    "                                                     a=a,\n",
-    "                                                     gamma=gamma)[1]\n",
+    "        beta_mat[j + 1, :] = SNP_UAG_logistic_SCAD_MCP_PCA(\n",
+    "            bed_file=bed_file,\n",
+    "            bim_file=bim_file,\n",
+    "            fam_file=fam_file,\n",
+    "            outcome=outcome,\n",
+    "            SNP_ind=SNP_ind,\n",
+    "            L_convex=L_convex,\n",
+    "            pca=pca,\n",
+    "            beta_0=beta_mat[j, :],\n",
+    "            tol=tol,\n",
+    "            maxit=maxit,\n",
+    "            _lambda=lambda_[j],\n",
+    "            penalty=penalty,\n",
+    "            outcome_iid=outcome_iid,\n",
+    "            a=a,\n",
+    "            gamma=gamma)[1]\n",
     "    return beta_mat[1:, :]"
    ]
   },
@@ -642,7 +645,7 @@
     "pca = PCA(n_components=3)\n",
     "pca.fit(temp)\n",
     "pca = pca.components_.T\n",
-    "print(pca.shape)    \n",
+    "print(pca.shape)\n",
     "\n",
     "L_convex = 1 / _bed.iid_count * (_np.linalg.eigvalsh(temp @ temp.T)[-1])\n",
     "print(\"L_convex is:\", L_convex)\n",
@@ -699,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
