--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -253,7 +253,7 @@
     "        _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
     "        _XTXbeta[j] = _X @ _\n",
     "    _XTXbeta = _np.hstack(\n",
-    "        (_np.array([np.sum(_)]), _ @ pca[gene_ind, :], _XTXbeta))\n",
+    "        (_np.array([_np.sum(_)]), _ @ pca[gene_ind, :], _XTXbeta))\n",
     "    del _\n",
     "    return 1 / N * _XTXbeta\n",
     "\n",
